--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
     "fa-icons": "^0.2.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
