--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "fa-icons": "^0.2.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
